--- a/web/src/public/stylesheets/components/footer.scss
+++ b/web/src/public/stylesheets/components/footer.scss
@@ -32,6 +32,7 @@
                 margin-bottom: -7px;
                 font-size: 22px;
                 color: rgb(255, 255, 255);
+                text-transform: uppercase;
             }
 
             .powered-by {
