--- a/web/src/public/stylesheets/components/profile.scss
+++ b/web/src/public/stylesheets/components/profile.scss
@@ -1,5 +1,6 @@
 .heroic-profile {
     display: flex;
+    flex-direction: column;
 
     .left {
         flex: 0 0 25%;
@@ -15,5 +16,42 @@
         .right-container {
             margin: 0 10px;
         }
+    }
+
+    .box {
+        flex-grow: 1;
+        width: 100%;
+        height: 100%;
+        box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+        background-color: #0b6395;
+        border: 3px solid #2685bc;
+
+        .box-container {
+            padding: 12px 24px;
+
+            .container-header {
+                text-transform: uppercase;
+                font-weight: 200;
+                background: none;
+                margin: 0 0 12px;
+                font-size: 32px;
+                color: rgb(255, 255, 255);
+                text-align: center;
+            }
+        }
+    }
+
+    &.heroic-profile-friends:before, &.heroic-profile-rooms:before {
+        content: '';
+        width: 550px;
+        height: 140px;
+    }
+
+    &.heroic-profile-friends:before {
+        background-image: url('https://images.habbo.com/habbo-web/america/en/assets/images/teaser_profile_friends.92e78a5a.png');
+    }
+
+    &.heroic-profile-rooms:before {
+        background-image: url('https://images.habbo.com/habbo-web/america/en/assets/images/teaser_profile_rooms.2596469e.png');
     }
 }
